RESOLVED FIXED144288
Catch unexpected exits in DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=144288
Summary Catch unexpected exits in DumpRenderTree
Alexey Proskuryakov
Reported 2015-04-27 15:59:19 PDT
In bug 142719, one suspicion is that the test actually terminates DumpRenderTree. I think that we can catch such conditions.
Attachments
proposed patch (1.52 KB, patch)
2015-04-27 16:05 PDT, Alexey Proskuryakov
thorton: review+
Alexey Proskuryakov
Comment 1 2015-04-27 16:05:06 PDT
Created attachment 251782 [details] proposed patch
Alexey Proskuryakov
Comment 2 2015-04-27 16:35:23 PDT
Committed r183435
Note You need to log in before you can comment on or make changes to this bug.