Catch unexpected exits in DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=144288

Reviewed by Tim Horton.

* DumpRenderTree/mac/DumpRenderTree.mm:
(atexitFunction):
(DumpRenderTreeMain):



Canonical link: https://commits.webkit.org/162297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183435 268f45cc-cd09-0410-ab3c-d52691b4dbfc